crates/rpkl-runtime/tests/snapshots/snapshot_tests__int_methods.snap
---
source: crates/pkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "absVal": 42,
  "signVal": -1,
  "evenCheck": true,
  "oddCheck": true
}
