crates/rpkl-runtime/tests/snapshots/snapshot_tests__int_min_max.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": 3,
  "r2": 3,
  "r3": 5,
  "r4": 5
}
