crates/rpkl-runtime/tests/snapshots/snapshot_tests__int_to_int_to_float.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": 42,
  "r2": 42.0
}
