crates/rpkl-runtime/tests/snapshots/snapshot_tests__intseq.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 1527
expression: eval_pkl(source)
---
{
  "seq": [
    0,
    1,
    2,
    3,
    4
  ]
}
