crates/rpkl-runtime/tests/snapshots/snapshot_tests__intseq_properties.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "s": [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9
  ],
  "r1": 1,
  "r2": 10,
  "r3": 1
}
