crates/rpkl-runtime/tests/snapshots/snapshot_tests__intseq_to_list.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": [
    1,
    2,
    3,
    4,
    5
  ],
  "r2": [],
  "r3": [
    1
  ]
}
